# surface2volume

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CmdlineUtils.cpp  CmdlineUtils.h  Mesh.cpp  Mesh.h  OBJReader.cpp  OBJReader.h  README.md  Scene.cpp  Scene.h  Triangle.cpp  Triangle.h  surface2volume.cpp  test.cpp
.travis_scripts/: install_vigra.sh
config/: FindVigra.cmake
